--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<view
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="fill_parent"
@@ -10,12 +10,12 @@
             android:id="@+id/current_fps_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World, FpsTestActivity"
             />
     <ListView
+            android:id="@+id/my_list_view"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             />
-</LinearLayout>
+</view>
 
