--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<view
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        class="com.example.FpsTestActivity$MyLayout"
         >
     <TextView
             android:id="@+id/current_fps_view"
@@ -17,5 +16,5 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             />
-</view>
+</LinearLayout>
 
