--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <TextView
-        android:id="@+id/current_fps_view"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        />
     <ListView
         android:id="@+id/my_list_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
+        android:layout_width="600dp"
+        android:layout_height="600dp"
+        android:layout_centerInParent="true"
+        android:cacheColorHint="@android:color/transparent"
         />
-</LinearLayout>
+</RelativeLayout>
 
