--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,6 +10,7 @@
         android:layout_height="600dp"
         android:layout_centerInParent="true"
         android:cacheColorHint="@android:color/transparent"
+        android:background="@drawable/rounded_rectangle_shape"
         />
 </RelativeLayout>
 
