Tweak to make like Xfinity app... testing highlighting first item in the list and rounded corners, etc.

--- a/res/drawable/rounded_rectangle_shape.xml
+++ b/res/drawable/rounded_rectangle_shape.xml
@@ -7,7 +7,7 @@
         android:color="#cccccc"/>
 
     <solid
-        android:color="@android:color/transparent"/>
+        android:color="@android:color/white"/>
 
     <corners
         android:radius="7dp"/>
