--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@android:color/black"
     >
     <ListView
         android:id="@+id/my_list_view"
