--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -11,6 +11,7 @@
         android:layout_height="600dp"
         android:layout_centerInParent="true"
         android:cacheColorHint="@android:color/transparent"
+        android:listSelector="@drawable/list_item_selector"
         android:background="@drawable/rounded_rectangle_shape"
         />
 </RelativeLayout>
