Use setActivated() which is honeycomb only

--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -5,5 +5,6 @@
     android:layout_height="fill_parent"
     android:padding="10dp"
     android:textSize="16sp"
+    android:background="@drawable/list_item_selector"
     >
 </TextView>
