--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<com.example.ListItemLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dp"
-    android:textSize="16sp"
-    >
-</TextView>
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:background="@drawable/list_item_selector">
+    <TextView
+        android:id="@+id/myTextView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="10dp"
+        android:textSize="16sp"
+        />
+</com.example.ListItemLayout>
