Clip the rounded edges so that highlights don't overlap the rounded corners

--- a/res/drawable/rounded_rectangle_shape.xml
+++ b/res/drawable/rounded_rectangle_shape.xml
@@ -10,7 +10,7 @@
         android:color="@android:color/white"/>
 
     <corners
-        android:radius="7dp"/>
+        android:radius="@dimen/rounded_radius"/>
     
 </shape>
 
