--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:background="@android:color/black"
     >
-    <com.example.RoundedRectangleListView
+    <com.example.RoundedCornerListView
         android:id="@+id/my_list_view"
         android:layout_width="600dp"
         android:layout_height="600dp"
