--- a/res/drawable/rounded_rectangle_shape.xml
+++ b/res/drawable/rounded_rectangle_shape.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#cccccc"/>
+        android:color="#CCCCCC"/>
 
     <solid
         android:color="@android:color/white"/>
