--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/black"
+    android:background="#EEEEEE"
     >
     <com.example.RoundedCornerListView
         android:id="@+id/my_list_view"
