--- a/res/drawable/rounded_rectangle_shape.xml
+++ b/res/drawable/rounded_rectangle_shape.xml
@@ -4,10 +4,16 @@
 
     <stroke
         android:width="1dp"
-        android:color="#CCCCCC"/>
+        android:color="#FFCCCCCC"/>
 
     <solid
         android:color="@android:color/white"/>
+
+    <padding
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp"
+        android:left="1dp"/>
 
     <corners
         android:radius="@dimen/rounded_radius"/>
