--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<CheckedTextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/myTextView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dp"
     android:textSize="16sp"
+    android:background="@drawable/list_item_selector"
+    android:textColor="@color/list_item_color_selector"
     >
-</TextView>
+</CheckedTextView>
